app/res/main.css
/* ... */
.ui.star.rating {
    padding-top: 10px;
    padding-bottom: 5px;
}

.rose.comment {
    margin: -5px 0 5px 0 !important;
    opacity: 0.25;
    -webkit-transition: opacity 0.3s;
    -moz-transition: opacity 0.3s;
    -o-transition: opacity 0.3s;
    -ms-transition: opacity 0.3s;
    transition: opacity 0.3s;
}

.rose.comment.timeline {
    margin: 0 0 5px 6px !important;
}

.rose.comment:hover {
    opacity: 1.0;
}

.ui.nag {
    z-index: 10000;
}

